Brandon/Project/parser.output
Grammar

    0 $accept: Start $end

    1 Start: Method

    2 Method: T_Proc T_Identifier T_Lparen ArgsList T_Rparen T_Return Type T_Lcurly Body T_Rcurly Method
    3       | %empty

    4 Body: Method Vars StatementP T_Return Expr T_Semicolon

    5 ArgsList: T_Identifier MoreArgs T_Colon Type T_Semicolon ArgsList
    6         | %empty

    7 MoreArgs: T_Comma T_Identifier MoreArgs
    8         | %empty

    9 Vars: T_Var T_Identifier MoreVars T_Colon Type T_Semicolon Vars
   10     | %empty

   11 MoreVars: T_Comma T_Identifier MoreVars
   12         | %empty

   13 Type: T_Integer
   14     | T_Char
   15     | T_Charptr
   16     | T_Intptr
   17     | T_Bool
   18     | T_String

   19 UnaryExpr: T_Minus T_Num
   20          | T_Minus T_Identifier
   21          | T_Plus T_Num
   22          | T_Plus T_Identifier
   23          | T_Num
   24          | T_True
   25          | T_False
   26          | T_Chartype
   27          | T_Identifier
   28          | T_Identifier T_Lbracket Expr T_Rbracket
   29          | T_Not UnaryExpr
   30          | T_Dereference T_Identifier
   31          | T_Dereference T_Lparen Expr T_Rparen
   32          | T_Address T_Identifier
   33          | T_Address T_Identifier T_Lbracket Expr T_Rbracket
   34          | T_Null

   35 Op: T_Plus Expr
   36   | T_Minus Expr
   37   | T_Times Expr
   38   | T_Divide Expr
   39   | T_Equals Expr
   40   | T_LT Expr
   41   | T_LTE Expr
   42   | T_GT Expr
   43   | T_GTE Expr
   44   | T_NE Expr
   45   | T_Or Expr
   46   | T_And Expr
   47   | %empty

   48 LHS: T_Identifier
   49    | T_Identifier T_Lbracket Expr T_Rbracket
   50    | T_Dereference T_Identifier

   51 RHS: Expr
   52    | T_Stringtype

   53 AssignmentOp: LHS T_Assignment RHS T_Semicolon

   54 Expr: UnaryExpr Op
   55     | T_Lparen Expr T_Rparen Op
   56     | T_Not T_Lparen Expr T_Rparen Op
   57     | '|' Expr '|' Op
   58     | T_Identifier T_Lparen MoreExpr T_Rparen

   59 StatementP: AssignmentOp StatementP
   60           | MethodCall StatementP
   61           | While StatementP
   62           | CodeBlock StatementP
   63           | IfP StatementP
   64           | IfElse StatementP
   65           | %empty

   66 MethodCall: LHS T_Assignment T_Identifier T_Lparen Expr MoreExpr T_Rparen T_Semicolon

   67 MoreExpr: T_Comma Expr MoreExpr
   68         | %empty

   69 IfP: T_If T_Lparen Expr T_Rparen CodeBlock

   70 IfElse: IfP T_Else CodeBlock

   71 While: T_While T_Lparen Expr T_Rparen CodeBlock

   72 CodeBlock: T_Lcurly Vars StatementP T_Rcurly


Terminals, with rules where they appear

$end (0) 0
'|' (124) 57
error (256)
T_Bool (258) 17
T_Char (259) 14
T_Integer (260) 13
T_String (261) 18
T_Intptr (262) 16
T_Charptr (263) 15
T_If (264) 69
T_Else (265) 70
T_While (266) 71
T_Var (267) 9
T_Proc (268) 2
T_Return (269) 2 4
T_True (270) 24
T_False (271) 25
T_Null (272) 34
T_Semicolon (273) 4 5 9 53 66
T_Colon (274) 5 9
T_Lcurly (275) 2 72
T_Rcurly (276) 2 72
T_Lparen (277) 2 31 55 56 58 66 69 71
T_Rparen (278) 2 31 55 56 58 66 69 71
T_Lbracket (279) 28 33 49
T_Rbracket (280) 28 33 49
T_Num (281) 19 21 23
T_Stringtype (282) 52
T_Chartype (283) 26
T_Identifier (284) 2 5 7 9 11 20 22 27 28 30 32 33 48 49 50 58 66
T_Comma (285) 7 11 67
T_Assignment (286) 53 66
T_Or (287) 45
T_And (288) 46
T_Equals (289) 39
T_NE (290) 44
T_GT (291) 42
T_GTE (292) 43
T_LT (293) 40
T_LTE (294) 41
T_Plus (295) 21 22 35
T_Minus (296) 19 20 36
T_Times (297) 37
T_Divide (298) 38
T_Not (299) 29 56
T_Address (300) 32 33
T_Dereference (301) 30 31 50


Nonterminals, with rules where they appear

$accept (48)
    on left: 0
Start (49)
    on left: 1, on right: 0
Method (50)
    on left: 2 3, on right: 1 2 4
Body (51)
    on left: 4, on right: 2
ArgsList (52)
    on left: 5 6, on right: 2 5
MoreArgs (53)
    on left: 7 8, on right: 5 7
Vars (54)
    on left: 9 10, on right: 4 9 72
MoreVars (55)
    on left: 11 12, on right: 9 11
Type (56)
    on left: 13 14 15 16 17 18, on right: 2 5 9
UnaryExpr (57)
    on left: 19 20 21 22 23 24 25 26 27 28 29 30 31 32 33 34, on right:
    29 54
Op (58)
    on left: 35 36 37 38 39 40 41 42 43 44 45 46 47, on right: 54 55
    56 57
LHS (59)
    on left: 48 49 50, on right: 53 66
RHS (60)
    on left: 51 52, on right: 53
AssignmentOp (61)
    on left: 53, on right: 59
Expr (62)
    on left: 54 55 56 57 58, on right: 4 28 31 33 35 36 37 38 39 40
    41 42 43 44 45 46 49 51 55 56 57 66 67 69 71
StatementP (63)
    on left: 59 60 61 62 63 64 65, on right: 4 59 60 61 62 63 64 72
MethodCall (64)
    on left: 66, on right: 60
MoreExpr (65)
    on left: 67 68, on right: 58 66 67
IfP (66)
    on left: 69, on right: 63 70
IfElse (67)
    on left: 70, on right: 64
While (68)
    on left: 71, on right: 61
CodeBlock (69)
    on left: 72, on right: 62 69 70 71


State 0

    0 $accept: . Start $end

    T_Proc  shift, and go to state 1

    $default  reduce using rule 3 (Method)

    Start   go to state 2
    Method  go to state 3


State 1

    2 Method: T_Proc . T_Identifier T_Lparen ArgsList T_Rparen T_Return Type T_Lcurly Body T_Rcurly Method

    T_Identifier  shift, and go to state 4


State 2

    0 $accept: Start . $end

    $end  shift, and go to state 5


State 3

    1 Start: Method .

    $default  reduce using rule 1 (Start)


State 4

    2 Method: T_Proc T_Identifier . T_Lparen ArgsList T_Rparen T_Return Type T_Lcurly Body T_Rcurly Method

    T_Lparen  shift, and go to state 6


State 5

    0 $accept: Start $end .

    $default  accept


State 6

    2 Method: T_Proc T_Identifier T_Lparen . ArgsList T_Rparen T_Return Type T_Lcurly Body T_Rcurly Method

    T_Identifier  shift, and go to state 7

    $default  reduce using rule 6 (ArgsList)

    ArgsList  go to state 8


State 7

    5 ArgsList: T_Identifier . MoreArgs T_Colon Type T_Semicolon ArgsList

    T_Comma  shift, and go to state 9

    $default  reduce using rule 8 (MoreArgs)

    MoreArgs  go to state 10


State 8

    2 Method: T_Proc T_Identifier T_Lparen ArgsList . T_Rparen T_Return Type T_Lcurly Body T_Rcurly Method

    T_Rparen  shift, and go to state 11


State 9

    7 MoreArgs: T_Comma . T_Identifier MoreArgs

    T_Identifier  shift, and go to state 12


State 10

    5 ArgsList: T_Identifier MoreArgs . T_Colon Type T_Semicolon ArgsList

    T_Colon  shift, and go to state 13


State 11

    2 Method: T_Proc T_Identifier T_Lparen ArgsList T_Rparen . T_Return Type T_Lcurly Body T_Rcurly Method

    T_Return  shift, and go to state 14


State 12

    7 MoreArgs: T_Comma T_Identifier . MoreArgs

    T_Comma  shift, and go to state 9

    $default  reduce using rule 8 (MoreArgs)

    MoreArgs  go to state 15


State 13

    5 ArgsList: T_Identifier MoreArgs T_Colon . Type T_Semicolon ArgsList

    T_Bool     shift, and go to state 16
    T_Char     shift, and go to state 17
    T_Integer  shift, and go to state 18
    T_String   shift, and go to state 19
    T_Intptr   shift, and go to state 20
    T_Charptr  shift, and go to state 21

    Type  go to state 22


State 14

    2 Method: T_Proc T_Identifier T_Lparen ArgsList T_Rparen T_Return . Type T_Lcurly Body T_Rcurly Method

    T_Bool     shift, and go to state 16
    T_Char     shift, and go to state 17
    T_Integer  shift, and go to state 18
    T_String   shift, and go to state 19
    T_Intptr   shift, and go to state 20
    T_Charptr  shift, and go to state 21

    Type  go to state 23


State 15

    7 MoreArgs: T_Comma T_Identifier MoreArgs .

    $default  reduce using rule 7 (MoreArgs)


State 16

   17 Type: T_Bool .

    $default  reduce using rule 17 (Type)


State 17

   14 Type: T_Char .

    $default  reduce using rule 14 (Type)


State 18

   13 Type: T_Integer .

    $default  reduce using rule 13 (Type)


State 19

   18 Type: T_String .

    $default  reduce using rule 18 (Type)


State 20

   16 Type: T_Intptr .

    $default  reduce using rule 16 (Type)


State 21

   15 Type: T_Charptr .

    $default  reduce using rule 15 (Type)


State 22

    5 ArgsList: T_Identifier MoreArgs T_Colon Type . T_Semicolon ArgsList

    T_Semicolon  shift, and go to state 24


State 23

    2 Method: T_Proc T_Identifier T_Lparen ArgsList T_Rparen T_Return Type . T_Lcurly Body T_Rcurly Method

    T_Lcurly  shift, and go to state 25


State 24

    5 ArgsList: T_Identifier MoreArgs T_Colon Type T_Semicolon . ArgsList

    T_Identifier  shift, and go to state 7

    $default  reduce using rule 6 (ArgsList)

    ArgsList  go to state 26


State 25

    2 Method: T_Proc T_Identifier T_Lparen ArgsList T_Rparen T_Return Type T_Lcurly . Body T_Rcurly Method

    T_Proc  shift, and go to state 1

    $default  reduce using rule 3 (Method)

    Method  go to state 27
    Body    go to state 28


State 26

    5 ArgsList: T_Identifier MoreArgs T_Colon Type T_Semicolon ArgsList .

    $default  reduce using rule 5 (ArgsList)


State 27

    4 Body: Method . Vars StatementP T_Return Expr T_Semicolon

    T_Var  shift, and go to state 29

    $default  reduce using rule 10 (Vars)

    Vars  go to state 30


State 28

    2 Method: T_Proc T_Identifier T_Lparen ArgsList T_Rparen T_Return Type T_Lcurly Body . T_Rcurly Method

    T_Rcurly  shift, and go to state 31


State 29

    9 Vars: T_Var . T_Identifier MoreVars T_Colon Type T_Semicolon Vars

    T_Identifier  shift, and go to state 32


State 30

    4 Body: Method Vars . StatementP T_Return Expr T_Semicolon

    T_If           shift, and go to state 33
    T_While        shift, and go to state 34
    T_Lcurly       shift, and go to state 35
    T_Identifier   shift, and go to state 36
    T_Dereference  shift, and go to state 37

    $default  reduce using rule 65 (StatementP)

    LHS           go to state 38
    AssignmentOp  go to state 39
    StatementP    go to state 40
    MethodCall    go to state 41
    IfP           go to state 42
    IfElse        go to state 43
    While         go to state 44
    CodeBlock     go to state 45


State 31

    2 Method: T_Proc T_Identifier T_Lparen ArgsList T_Rparen T_Return Type T_Lcurly Body T_Rcurly . Method

    T_Proc  shift, and go to state 1

    $default  reduce using rule 3 (Method)

    Method  go to state 46


State 32

    9 Vars: T_Var T_Identifier . MoreVars T_Colon Type T_Semicolon Vars

    T_Comma  shift, and go to state 47

    $default  reduce using rule 12 (MoreVars)

    MoreVars  go to state 48


State 33

   69 IfP: T_If . T_Lparen Expr T_Rparen CodeBlock

    T_Lparen  shift, and go to state 49


State 34

   71 While: T_While . T_Lparen Expr T_Rparen CodeBlock

    T_Lparen  shift, and go to state 50


State 35

   72 CodeBlock: T_Lcurly . Vars StatementP T_Rcurly

    T_Var  shift, and go to state 29

    $default  reduce using rule 10 (Vars)

    Vars  go to state 51


State 36

   48 LHS: T_Identifier .
   49    | T_Identifier . T_Lbracket Expr T_Rbracket

    T_Lbracket  shift, and go to state 52

    $default  reduce using rule 48 (LHS)


State 37

   50 LHS: T_Dereference . T_Identifier

    T_Identifier  shift, and go to state 53


State 38

   53 AssignmentOp: LHS . T_Assignment RHS T_Semicolon
   66 MethodCall: LHS . T_Assignment T_Identifier T_Lparen Expr MoreExpr T_Rparen T_Semicolon

    T_Assignment  shift, and go to state 54


State 39

   59 StatementP: AssignmentOp . StatementP

    T_If           shift, and go to state 33
    T_While        shift, and go to state 34
    T_Lcurly       shift, and go to state 35
    T_Identifier   shift, and go to state 36
    T_Dereference  shift, and go to state 37

    $default  reduce using rule 65 (StatementP)

    LHS           go to state 38
    AssignmentOp  go to state 39
    StatementP    go to state 55
    MethodCall    go to state 41
    IfP           go to state 42
    IfElse        go to state 43
    While         go to state 44
    CodeBlock     go to state 45


State 40

    4 Body: Method Vars StatementP . T_Return Expr T_Semicolon

    T_Return  shift, and go to state 56


State 41

   60 StatementP: MethodCall . StatementP

    T_If           shift, and go to state 33
    T_While        shift, and go to state 34
    T_Lcurly       shift, and go to state 35
    T_Identifier   shift, and go to state 36
    T_Dereference  shift, and go to state 37

    $default  reduce using rule 65 (StatementP)

    LHS           go to state 38
    AssignmentOp  go to state 39
    StatementP    go to state 57
    MethodCall    go to state 41
    IfP           go to state 42
    IfElse        go to state 43
    While         go to state 44
    CodeBlock     go to state 45


State 42

   63 StatementP: IfP . StatementP
   70 IfElse: IfP . T_Else CodeBlock

    T_If           shift, and go to state 33
    T_Else         shift, and go to state 58
    T_While        shift, and go to state 34
    T_Lcurly       shift, and go to state 35
    T_Identifier   shift, and go to state 36
    T_Dereference  shift, and go to state 37

    $default  reduce using rule 65 (StatementP)

    LHS           go to state 38
    AssignmentOp  go to state 39
    StatementP    go to state 59
    MethodCall    go to state 41
    IfP           go to state 42
    IfElse        go to state 43
    While         go to state 44
    CodeBlock     go to state 45


State 43

   64 StatementP: IfElse . StatementP

    T_If           shift, and go to state 33
    T_While        shift, and go to state 34
    T_Lcurly       shift, and go to state 35
    T_Identifier   shift, and go to state 36
    T_Dereference  shift, and go to state 37

    $default  reduce using rule 65 (StatementP)

    LHS           go to state 38
    AssignmentOp  go to state 39
    StatementP    go to state 60
    MethodCall    go to state 41
    IfP           go to state 42
    IfElse        go to state 43
    While         go to state 44
    CodeBlock     go to state 45


State 44

   61 StatementP: While . StatementP

    T_If           shift, and go to state 33
    T_While        shift, and go to state 34
    T_Lcurly       shift, and go to state 35
    T_Identifier   shift, and go to state 36
    T_Dereference  shift, and go to state 37

    $default  reduce using rule 65 (StatementP)

    LHS           go to state 38
    AssignmentOp  go to state 39
    StatementP    go to state 61
    MethodCall    go to state 41
    IfP           go to state 42
    IfElse        go to state 43
    While         go to state 44
    CodeBlock     go to state 45


State 45

   62 StatementP: CodeBlock . StatementP

    T_If           shift, and go to state 33
    T_While        shift, and go to state 34
    T_Lcurly       shift, and go to state 35
    T_Identifier   shift, and go to state 36
    T_Dereference  shift, and go to state 37

    $default  reduce using rule 65 (StatementP)

    LHS           go to state 38
    AssignmentOp  go to state 39
    StatementP    go to state 62
    MethodCall    go to state 41
    IfP           go to state 42
    IfElse        go to state 43
    While         go to state 44
    CodeBlock     go to state 45


State 46

    2 Method: T_Proc T_Identifier T_Lparen ArgsList T_Rparen T_Return Type T_Lcurly Body T_Rcurly Method .

    $default  reduce using rule 2 (Method)


State 47

   11 MoreVars: T_Comma . T_Identifier MoreVars

    T_Identifier  shift, and go to state 63


State 48

    9 Vars: T_Var T_Identifier MoreVars . T_Colon Type T_Semicolon Vars

    T_Colon  shift, and go to state 64


State 49

   69 IfP: T_If T_Lparen . Expr T_Rparen CodeBlock

    T_True         shift, and go to state 65
    T_False        shift, and go to state 66
    T_Null         shift, and go to state 67
    T_Lparen       shift, and go to state 68
    T_Num          shift, and go to state 69
    T_Chartype     shift, and go to state 70
    T_Identifier   shift, and go to state 71
    T_Plus         shift, and go to state 72
    T_Minus        shift, and go to state 73
    T_Not          shift, and go to state 74
    T_Address      shift, and go to state 75
    T_Dereference  shift, and go to state 76
    '|'            shift, and go to state 77

    UnaryExpr  go to state 78
    Expr       go to state 79


State 50

   71 While: T_While T_Lparen . Expr T_Rparen CodeBlock

    T_True         shift, and go to state 65
    T_False        shift, and go to state 66
    T_Null         shift, and go to state 67
    T_Lparen       shift, and go to state 68
    T_Num          shift, and go to state 69
    T_Chartype     shift, and go to state 70
    T_Identifier   shift, and go to state 71
    T_Plus         shift, and go to state 72
    T_Minus        shift, and go to state 73
    T_Not          shift, and go to state 74
    T_Address      shift, and go to state 75
    T_Dereference  shift, and go to state 76
    '|'            shift, and go to state 77

    UnaryExpr  go to state 78
    Expr       go to state 80


State 51

   72 CodeBlock: T_Lcurly Vars . StatementP T_Rcurly

    T_If           shift, and go to state 33
    T_While        shift, and go to state 34
    T_Lcurly       shift, and go to state 35
    T_Identifier   shift, and go to state 36
    T_Dereference  shift, and go to state 37

    $default  reduce using rule 65 (StatementP)

    LHS           go to state 38
    AssignmentOp  go to state 39
    StatementP    go to state 81
    MethodCall    go to state 41
    IfP           go to state 42
    IfElse        go to state 43
    While         go to state 44
    CodeBlock     go to state 45


State 52

   49 LHS: T_Identifier T_Lbracket . Expr T_Rbracket

    T_True         shift, and go to state 65
    T_False        shift, and go to state 66
    T_Null         shift, and go to state 67
    T_Lparen       shift, and go to state 68
    T_Num          shift, and go to state 69
    T_Chartype     shift, and go to state 70
    T_Identifier   shift, and go to state 71
    T_Plus         shift, and go to state 72
    T_Minus        shift, and go to state 73
    T_Not          shift, and go to state 74
    T_Address      shift, and go to state 75
    T_Dereference  shift, and go to state 76
    '|'            shift, and go to state 77

    UnaryExpr  go to state 78
    Expr       go to state 82


State 53

   50 LHS: T_Dereference T_Identifier .

    $default  reduce using rule 50 (LHS)


State 54

   53 AssignmentOp: LHS T_Assignment . RHS T_Semicolon
   66 MethodCall: LHS T_Assignment . T_Identifier T_Lparen Expr MoreExpr T_Rparen T_Semicolon

    T_True         shift, and go to state 65
    T_False        shift, and go to state 66
    T_Null         shift, and go to state 67
    T_Lparen       shift, and go to state 68
    T_Num          shift, and go to state 69
    T_Stringtype   shift, and go to state 83
    T_Chartype     shift, and go to state 70
    T_Identifier   shift, and go to state 84
    T_Plus         shift, and go to state 72
    T_Minus        shift, and go to state 73
    T_Not          shift, and go to state 74
    T_Address      shift, and go to state 75
    T_Dereference  shift, and go to state 76
    '|'            shift, and go to state 77

    UnaryExpr  go to state 78
    RHS        go to state 85
    Expr       go to state 86


State 55

   59 StatementP: AssignmentOp StatementP .

    $default  reduce using rule 59 (StatementP)


State 56

    4 Body: Method Vars StatementP T_Return . Expr T_Semicolon

    T_True         shift, and go to state 65
    T_False        shift, and go to state 66
    T_Null         shift, and go to state 67
    T_Lparen       shift, and go to state 68
    T_Num          shift, and go to state 69
    T_Chartype     shift, and go to state 70
    T_Identifier   shift, and go to state 71
    T_Plus         shift, and go to state 72
    T_Minus        shift, and go to state 73
    T_Not          shift, and go to state 74
    T_Address      shift, and go to state 75
    T_Dereference  shift, and go to state 76
    '|'            shift, and go to state 77

    UnaryExpr  go to state 78
    Expr       go to state 87


State 57

   60 StatementP: MethodCall StatementP .

    $default  reduce using rule 60 (StatementP)


State 58

   70 IfElse: IfP T_Else . CodeBlock

    T_Lcurly  shift, and go to state 35

    CodeBlock  go to state 88


State 59

   63 StatementP: IfP StatementP .

    $default  reduce using rule 63 (StatementP)


State 60

   64 StatementP: IfElse StatementP .

    $default  reduce using rule 64 (StatementP)


State 61

   61 StatementP: While StatementP .

    $default  reduce using rule 61 (StatementP)


State 62

   62 StatementP: CodeBlock StatementP .

    $default  reduce using rule 62 (StatementP)


State 63

   11 MoreVars: T_Comma T_Identifier . MoreVars

    T_Comma  shift, and go to state 47

    $default  reduce using rule 12 (MoreVars)

    MoreVars  go to state 89


State 64

    9 Vars: T_Var T_Identifier MoreVars T_Colon . Type T_Semicolon Vars

    T_Bool     shift, and go to state 16
    T_Char     shift, and go to state 17
    T_Integer  shift, and go to state 18
    T_String   shift, and go to state 19
    T_Intptr   shift, and go to state 20
    T_Charptr  shift, and go to state 21

    Type  go to state 90


State 65

   24 UnaryExpr: T_True .

    $default  reduce using rule 24 (UnaryExpr)


State 66

   25 UnaryExpr: T_False .

    $default  reduce using rule 25 (UnaryExpr)


State 67

   34 UnaryExpr: T_Null .

    $default  reduce using rule 34 (UnaryExpr)


State 68

   55 Expr: T_Lparen . Expr T_Rparen Op

    T_True         shift, and go to state 65
    T_False        shift, and go to state 66
    T_Null         shift, and go to state 67
    T_Lparen       shift, and go to state 68
    T_Num          shift, and go to state 69
    T_Chartype     shift, and go to state 70
    T_Identifier   shift, and go to state 71
    T_Plus         shift, and go to state 72
    T_Minus        shift, and go to state 73
    T_Not          shift, and go to state 74
    T_Address      shift, and go to state 75
    T_Dereference  shift, and go to state 76
    '|'            shift, and go to state 77

    UnaryExpr  go to state 78
    Expr       go to state 91


State 69

   23 UnaryExpr: T_Num .

    $default  reduce using rule 23 (UnaryExpr)


State 70

   26 UnaryExpr: T_Chartype .

    $default  reduce using rule 26 (UnaryExpr)


State 71

   27 UnaryExpr: T_Identifier .
   28          | T_Identifier . T_Lbracket Expr T_Rbracket
   58 Expr: T_Identifier . T_Lparen MoreExpr T_Rparen

    T_Lparen    shift, and go to state 92
    T_Lbracket  shift, and go to state 93

    $default  reduce using rule 27 (UnaryExpr)


State 72

   21 UnaryExpr: T_Plus . T_Num
   22          | T_Plus . T_Identifier

    T_Num         shift, and go to state 94
    T_Identifier  shift, and go to state 95


State 73

   19 UnaryExpr: T_Minus . T_Num
   20          | T_Minus . T_Identifier

    T_Num         shift, and go to state 96
    T_Identifier  shift, and go to state 97


State 74

   29 UnaryExpr: T_Not . UnaryExpr
   56 Expr: T_Not . T_Lparen Expr T_Rparen Op

    T_True         shift, and go to state 65
    T_False        shift, and go to state 66
    T_Null         shift, and go to state 67
    T_Lparen       shift, and go to state 98
    T_Num          shift, and go to state 69
    T_Chartype     shift, and go to state 70
    T_Identifier   shift, and go to state 99
    T_Plus         shift, and go to state 72
    T_Minus        shift, and go to state 73
    T_Not          shift, and go to state 100
    T_Address      shift, and go to state 75
    T_Dereference  shift, and go to state 76

    UnaryExpr  go to state 101


State 75

   32 UnaryExpr: T_Address . T_Identifier
   33          | T_Address . T_Identifier T_Lbracket Expr T_Rbracket

    T_Identifier  shift, and go to state 102


State 76

   30 UnaryExpr: T_Dereference . T_Identifier
   31          | T_Dereference . T_Lparen Expr T_Rparen

    T_Lparen      shift, and go to state 103
    T_Identifier  shift, and go to state 104


State 77

   57 Expr: '|' . Expr '|' Op

    T_True         shift, and go to state 65
    T_False        shift, and go to state 66
    T_Null         shift, and go to state 67
    T_Lparen       shift, and go to state 68
    T_Num          shift, and go to state 69
    T_Chartype     shift, and go to state 70
    T_Identifier   shift, and go to state 71
    T_Plus         shift, and go to state 72
    T_Minus        shift, and go to state 73
    T_Not          shift, and go to state 74
    T_Address      shift, and go to state 75
    T_Dereference  shift, and go to state 76
    '|'            shift, and go to state 77

    UnaryExpr  go to state 78
    Expr       go to state 105


State 78

   54 Expr: UnaryExpr . Op

    T_Or      shift, and go to state 106
    T_And     shift, and go to state 107
    T_Equals  shift, and go to state 108
    T_NE      shift, and go to state 109
    T_GT      shift, and go to state 110
    T_GTE     shift, and go to state 111
    T_LT      shift, and go to state 112
    T_LTE     shift, and go to state 113
    T_Plus    shift, and go to state 114
    T_Minus   shift, and go to state 115
    T_Times   shift, and go to state 116
    T_Divide  shift, and go to state 117

    $default  reduce using rule 47 (Op)

    Op  go to state 118


State 79

   69 IfP: T_If T_Lparen Expr . T_Rparen CodeBlock

    T_Rparen  shift, and go to state 119


State 80

   71 While: T_While T_Lparen Expr . T_Rparen CodeBlock

    T_Rparen  shift, and go to state 120


State 81

   72 CodeBlock: T_Lcurly Vars StatementP . T_Rcurly

    T_Rcurly  shift, and go to state 121


State 82

   49 LHS: T_Identifier T_Lbracket Expr . T_Rbracket

    T_Rbracket  shift, and go to state 122


State 83

   52 RHS: T_Stringtype .

    $default  reduce using rule 52 (RHS)


State 84

   27 UnaryExpr: T_Identifier .
   28          | T_Identifier . T_Lbracket Expr T_Rbracket
   58 Expr: T_Identifier . T_Lparen MoreExpr T_Rparen
   66 MethodCall: LHS T_Assignment T_Identifier . T_Lparen Expr MoreExpr T_Rparen T_Semicolon

    T_Lparen    shift, and go to state 123
    T_Lbracket  shift, and go to state 93

    $default  reduce using rule 27 (UnaryExpr)


State 85

   53 AssignmentOp: LHS T_Assignment RHS . T_Semicolon

    T_Semicolon  shift, and go to state 124


State 86

   51 RHS: Expr .

    $default  reduce using rule 51 (RHS)


State 87

    4 Body: Method Vars StatementP T_Return Expr . T_Semicolon

    T_Semicolon  shift, and go to state 125


State 88

   70 IfElse: IfP T_Else CodeBlock .

    $default  reduce using rule 70 (IfElse)


State 89

   11 MoreVars: T_Comma T_Identifier MoreVars .

    $default  reduce using rule 11 (MoreVars)


State 90

    9 Vars: T_Var T_Identifier MoreVars T_Colon Type . T_Semicolon Vars

    T_Semicolon  shift, and go to state 126


State 91

   55 Expr: T_Lparen Expr . T_Rparen Op

    T_Rparen  shift, and go to state 127


State 92

   58 Expr: T_Identifier T_Lparen . MoreExpr T_Rparen

    T_Comma  shift, and go to state 128

    $default  reduce using rule 68 (MoreExpr)

    MoreExpr  go to state 129


State 93

   28 UnaryExpr: T_Identifier T_Lbracket . Expr T_Rbracket
